@@ -1,3 +1,9 @@
+Fri Dec 29 13:28:07 2006  Tim Janik  <timj@imendio.com>
+
+	* glib/gslice.c: turned detection of too late g_thread_init() calls
+	into a warning. this is a temporary work-around for some head-room
+	to fix affected programs, memory corruption still occours regardless.
+
 2006-12-29  Matthias Clasen  <mclasen@redhat.com>
 
 	* tests/gobject/Makefile.am:
